# distributed-curator

./: .gitignore  .scalafmt.conf  CONTRIBUTING.md  LICENSE  README.md  build.sbt  pyproject.toml  requirements.txt  setup.py  to_do.md
distributed_curator/: __init__.py  shingle_hash_wrapper.py  spark_partition_aware_deduplication.py  spark_utils.py  two_phase_partition_aware_union_find.py  udf.py
distributed_curator/cython_minhash/: setup.py
distributed_curator/quality/: __init__.py  config.py  fasttext_convert.py  fasttext_scoring.py  heuristics.py  kernel_scoring.py  native_heuristics.py
distributed_curator/quality/kernel/: heuristic_kernel.pyx  ngram_kernel.pxd  ngram_kernel.pyx
docs/: architecture.md  background_math.md  emr-deployment.md  fasttext.md  quality_filter_spec.md
project/: plugins.sbt
scripts/: baseline_ngram.py  benchmark_quality_heuristics.py  check_spark_persist.py  generate_fasttext_fixtures.py  install-hooks.sh  pre-commit  translate_driver_diagnostic_logs.py  upload_heapdump_on_shutdown.sh
src/: driver_memory_diagnostics.py  shingle_hash_wrapper.py  spark_partition_aware_deduplicattion_v2.py  spark_utils.py  spark_utils_deprecated.py  two_phase_partition_aware_union_find.py  udf.py  union_find.py
src/cython_minhash/: shingle_hash.c  shingle_hash.pyx  shingle_hash_wrapper.py
src/main/scala/: compute_partition_assignments.scala  identity_repartition.scala  minhash_batch_udf.scala  partition_aware_union_find.scala  process_partition_locally_udf.scala  utils.scala
src/test/scala/: compute_partition_assignments_test.scala  identity_repartutuon_test.scala  partition_aware_union_find_test.scala  process_partition_locally_udf_test.scala
terraform/: main.tf  requirements.txt
terraform/text_deduplication/: main.tf  requirements_emr.txt
test/: conftest.py  spark_deduplication_test.py
test/integration_test/: spark_deduplication_test.py  wet_file_utils.py
test/unit_test/: fasttext_convert_test.py  quality_fasttext_test.py  quality_heuristics_test.py  quality_kernel_test.py  shingle_hash_test.py  shingle_hash_wrapper_test.py  spark_partition_aware_deduplicattion_test.py  spark_partition_aware_deduplicattion_v2_test.py  two_phase_partition_aware_union_find_test.py  union_find_test.py  wet_file_utils_test.py
test/unit_test/fixtures/: fasttext_golden.json  quality_golden.json
