# ==============================================================================
# pyproject.toml — package metadata, build config, and tool configuration
# Place in repo root alongside build.sbt

# modern Python standard (PEP 518/621) that replaces the old scattered config files.
# ruff specifically only reads from pyproject.toml (or ruff.toml) 
# — it doesn't support the old .flake8 yaml/ini format at all

# Syntax of this file is PEP 518: https://peps.python.org/pep-0518/
# PEP 621 (project metadata): https://peps.python.org/pep-0621/
# ==============================================================================


# -==============================================================================
# Build system — how pip should build this package
# setuptools is required (not hatch/flit) because we have a Cython C extension
# that needs a setup.py to define Extension() modules.
# ==============================================================================
[build-system]
requires = ["setuptools>=68.0", "wheel", "Cython>=3.0", "numpy"]
build-backend = "setuptools.build_meta"

# ==============================================================================
# project metadata
# ==============================================================================
[project]
name = "distributed-curator"
version = "0.1.0"
description = "Partition-aware MinHash LSH deduplication for large-scale text data curation on Apache Spark"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Ken Obata"},
]
keywords = [
    "deduplication",
    "minhash",
    "lsh",
    "spark",
    "data-curation",
    "llm",
    "common-crawl",
    "near-duplicate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]
dependencies = [
    "pyspark>=3.5",
    "numpy",
    "mmh3",
    "pandas",
]
 
[project.urls]
Homepage = "https://github.com/KenObata/distributed-curator"
Repository = "https://github.com/KenObata/distributed-curator"


# ==============================================================================
# Setuptools — where to find the Python package
# Scala source stays in src/main/scala/ (managed by sbt, not setuptools)
# ==============================================================================
[tool.setuptools.packages.find]
include = ["distributed_curator*"]
 
# Include non-Python files in the package (Cython source, C source, JAR)
[tool.setuptools.package-data]
"distributed_curator.cython_minhash" = ["*.pyx", "*.c", "*.h"]

# bundle jar inside of pip - users don't need manual download from github
"distributed_curator.jars" = ["*.jar"]

# ==============================================================================
# ruff lint
# ==============================================================================
[tool.ruff]
target-version = "py39"
line-length = 120
# Only lint project source and test files
include = ["distributed_curator/**/*.py", "test/**/*.py"]
exclude = [
    "distributed_curator/__pycache__",
    "distributed_curator/cython_minhash/shingle_hash.c",  # generated by Cython
    ".scala-build",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
# these mappings are defined at https://docs.astral.sh/ruff/rules/
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import ordering)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length — handled by formatter
    "B905",  # zip-strict — not needed for Spark UDFs
    "SIM108",# ternary — readability preference
    "N812",   # Lowercase imported as non-lowercase — F is standard Spark convention
]

[tool.ruff.lint.per-file-ignores]
# these rules are relaxed only under the target folder.
"test/**/*.py" = [
    "N802",  # allow non-lowercase function names in tests
    "N803",  # allow non-lowercase argument names in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space" # PEP 8 mandates this for Python
line-ending = "auto"

# ==============================================================================
# pytest configuration
# This replaces the old pytest.ini or setup.cfg [tool:pytest] section
# ==============================================================================
[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Default command-line flags
# -x: stop on first failure
# -q: quiet output
# --tb=short: shorter tracebacks
addopts = "-x -q --tb=short"

# ignore warnings
filterwarnings = [
    "ignore::DeprecationWarning:pyspark.*",
    "ignore::UserWarning:pyspark.*",
]